--- a/src/index.css
+++ b/src/index.css
@@ -147,3 +147,12 @@ tbody tr:nth-child(odd) {
 #acceptCandidate {
   background-color: #008e00;
 } 
+
+.rejectCandidate {
+  background-color: #ff0000;
+}
+
+.candidateImg {
+  width: 50px;
+  height: 50px;
+}
